Add Java 25 Maven skeleton with Copilot SDK integration